--- a/macros.tex
+++ b/macros.tex
@@ -3,3 +3,4 @@
 \newcommand{\dkl}{\mathrm{d}_{\mathrm{KL}}}
 \newcommand{\dtv}{\mathrm{d}_{\mathrm{TV}}}
 \newcommand{\emv}{\hat{\theta}_{\mathrm{emv}}}
+\usepackage{mathrsfs}
