--- a/ch7_0.qmd
+++ b/ch7_0.qmd
@@ -1,20 +1,24 @@
 # Estimation de densité
 
-Soient $X_1, \dotsc, X_n$ des variables iid, de fonction de répartition $F$. Le problème de l'estimation de densité est celui d'estimer la densité ou la fonction de répartition de $F$ à partir d'une réalisation des $x_i$. Dans toute la suite, on se placera dans le cas où la fonction de répartition est *continue*. 
+Soient $X_1, \dotsc, X_n$ des variables iid, de fonction de répartition $F$. Le problème de l'estimation de densité est celui d'estimer la densité ou la fonction de répartition de $F$ à partir de réalisations des $X_i$ : c'est un exemple typique d'estimation non-paramétrique. Dans toute la suite, on se placera dans le cas où la fonction de répartition est *continue*. 
 
 ## La répartition empirique 
 
 L'objet central est la fonction de répartition empirique, 
 $$ F_n(t) = \frac{1}{n}\#\{i : X_i \leqslant t\}.$$
-La loi des grands nombres montre immédiatement que, $\mathbb{P}$-presque sûrement, $F_n(t)$ converge vers $\mathbb{P}(X_i \leqslant t)=F(t)$. On peut étendre ce résultat simultanément à une quantité dénombrable de $t$ (par exemple, $\mathbb{Q}$) mais pas à tous. De plus, ce résultat ne dit pas si la *fonction* $F_n$ est proche de la fonction $F$, au sens de la norme uniforme par exemple. Le théorème suivant, parfois appelé *théorème fondamental de l'estimation*, confirme que c'est le cas. 
+La loi des grands nombres montre immédiatement que, $\mathbb{P}$-presque sûrement, $F_n(t)$ converge vers $\mathbb{P}(X_i \leqslant t)=F(t)$. On peut étendre ce résultat simultanément à une quantité dénombrable de $t$ (par exemple, $\mathbb{Q}$) mais pas à tous. De plus, ce résultat ne dit pas si la *fonction* $F_n$ est proche de la fonction $F$, au sens de la norme uniforme par exemple. Le théorème suivant, parfois appelé *théorème fondamental de l'estimation*, confirme que c'est le cas au sens de la norme uniforme^[On rappelle que $|g|_\infty = \sup_{x\in\mathbb{R}}|g(x)|$.]. 
 
 :::{#thm-glivenko}
 
 ## Théorème de Glivenko-Cantelli
 
-$\mathbb{P}$-presque sûrement, lorsque $n \to \infty$ on a $|\hat{F}_n - F|_\infty \to 0$. 
+$\mathbb{P}$-presque sûrement, lorsque $n \to \infty$ on a $|F_n - F|_\infty \to 0$. 
 
 :::
+
+Ce théorème dit essentiellement que $F_n$ est un estimateur « convergent au sens de la norme uniforme » de $F$. On pourra également utiliser ce théorème pour faire des tests : typiquement, si $|F_n - F|$ n'est pas suffisamment proche de zéro, on rejettera l'hypothèse selon laquelle les $X_i$ ont $F$ pour fonction de répartition. Le critère exact est appelé *test de Kolmogorov-Smirnov* et sera vu dans la section suivante. 
+
+### Calculabilité et loi  {.unnumbered}
 
 Soit $(X_{(1)}, \dotsc, X_{(n)})$ l'échantillon trié en ordre croissant. Par convention, on pose $X_{(0)} = -\infty$. Alors, la quantité $|F_n - F|_\infty$ est aisément calculable grâce à la représentation suivante : 
 $$|F_n - F|_\infty = \sup_{i\in \{0, \dotsc, n-1\}}\left|\frac{i}{n} - F(X_{(i)})\right| \vee \left| \frac{i}{n} - F(X_{(i+1)})\right|. $${#eq-supf}
@@ -42,16 +46,18 @@ Lorsque $X$ est une variable aléatoire dont la fonction de répartition $F$ est
 En particulier, la loi de $|F_n - F|_\infty$ ne dépend pas de $F$ : on dit que cette statistique est *libre*. 
 
 
-*Démonstration de @thm-glivenko.* 
+### Démonstration du théorème de Glivenko-Cantelli {.unnumbered}
 
 Notons $q_j$ le $j$-ème quantile d'ordre $N$ de $F$ (on choisira l'entier $N$ plus tard). Soit $x$ entre $q_j$ et $q_{j+1}$. Par croissance, $F_n(x)$ est entre $F_n(q_j)$ et  $F_n(q_{j+1})$, et $F(x)$ est entre $j/N$ et $(j+1)/N$. Ainsi, $F_n(x) - F(x)$ est plus grand que 
 $$ F_n(q_j) - \frac{j}{N} - \frac{1}{N}$$
 et plus petit que 
 $$ F_n(q_{j+1})- \frac{j}{n} = F_n(q_{j+1})- \frac{j+1}{N}  + \frac{1}{N}.$$
-Quoi qu'il arrive, $|F_n(x) - F(x)|$ est plus petit que le plus grand des $|F_n(q_j) - j/N|$ augmenté de $1/N$: 
-Par la borne de l'union, la probabilité que le plus grand soit plus grand que $t$ est plus petite que la somme des probabilités que chacun soit plus grand que $t$, soit $\mathbb{P}(|F_n(q_j) - j/N|>t)$. 
-Or, $nF_n(q_j)$ suit une loi $\mathrm{Bin}(n, j/N)$.  La probabilité ci-dessus est donc brutalement bornée par $N/nt^2$, par exemple via l'inégalité de Bienaymé-Chebychev. Le choix de $N = \lceil 2/t \rceil$ donne alors immédiatement 
-$$\mathbb{P}(|F_n - F|_\infty) \to 0. $$
+Quoi qu'il arrive, $|F_n(x) - F(x)|$ est plus petit que le plus grand des $|F_n(q_j) - j/N|$ augmenté de $1/N$, donc $|F_n - F|$ aussi. Pour n'importe quel $t>0$, nous pouvons utiliser la borne de l'union afin de borner $\mathbb{P}(|F_n - F|_\infty > t)$ par  $$\sum_{j}\mathbb{P}\left(\frac{1}{N} + |F_n(q_j) - j/N|>t\right).$${#eq-uniongc}
+Or, $nF_n(q_j)$ suit une loi $\mathrm{Bin}(n, j/N)$, donc si^[Que se passe-t-il si $t\leqslant 1/N$ ?]  $t-1/N>0$ on peut utiliser l'inégalité de Bienaymé-Chebychev, borner la variance de $\mathrm{Bin}(n,j/N)$ par $1/4n$, et obtenir
+$$\mathbb{P}\left(\frac{1}{N} + |F_n(q_j) - j/N|>t\right) \leqslant \frac{1}{4n (t - \frac{1}{N})^2}.$$
+Le terme @eq-uniongc est alors plus petit que $N / 4n(t-1/N)^2$. Le choix de $N = \lceil 2/t \rceil$ (par exemple) donne 
+$$\mathbb{P}(|F_n - F|_\infty > t) =O\left( \frac{1}{t^2 n}\right)$${#eq-predkw}
+et donc $|F_n - F|_\infty$ tend vers 0 en probabilité, comme demandé. 
 
 ## Inégalité DKW
 
@@ -62,6 +68,8 @@ Le théorème de Glivenko-Cantelli possède une version beaucoup plus puissante 
 
 ## Dvoretzky-Kiefer-Wolfowitz
 Dans le même contexte, pour tout $t>0$ on a 
-$$\mathbb{P}(|F_n - F|_\infty > t) \leqslant 2e^{-2nt^2}.$$
+$$\mathbb{P}(|F_n - F|_\infty > t) \leqslant 2e^{-2nt^2}.$${#eq-dkw}
 
 :::
+
+Il faut comparer ce résultat avec @eq-predkw, dans lequel la borne est effectivement décroissante en $nt^2$, mais polynomialement. L'inégalité DKW donne une décroissance *exponentielle* en $nt^2$. 
