--- a/ref.qmd
+++ b/ref.qmd
@@ -7,3 +7,6 @@
 - En anglais, la référence sur les modèles linéaires est [Econometric analysis](https://www.pearson.fr/book/?gcoi=27440100285130) de Greene. 
 - [Méthodes statistiques](https://www.eyrolles.com/Sciences/Livre/methodes-statistiques-9782717848595/) de Philippe Tassi est un bon livre général. 
 - [All of statistics](https://egrcc.github.io/docs/math/all-of-statistics.pdf) de Larry Wasserman est un ouvrage de référence. 
+- [Le cours de Stéphane Mallat au Collège de France](https://www.college-de-france.fr/fr/agenda/cours/information-et-complexite) qui est plus général, mais qui reprend tous les concepts. 
+- [L'article original de Ronald Fisher](/docs/fisher.pdf) de 1922 (et pas 1935 comme j'ai dit en cours), qui pose *toutes* les bases de la statistique moderne. 
+- [Computer age statistical inference](https://hastie.su.domains/CASI_files/PDF/casi.pdf) de Bradley Efron et Trevor Hastie n'est pas un livre de mathématiques, mais c'est le meilleur livre qui présente les idées et les algorithmes des statistiques avec un point de vue moderne. 
