--- a/ch6_0.qmd
+++ b/ch6_0.qmd
@@ -8,7 +8,7 @@ $$ \frac{1}{1/\lambda}e^{-\lambda x}$$
 Les lois discrètes ont une densité par rapport à la mesure de comptage : la loi de Bernoulli, par exemple, s'écrit 
 $$ p^n(1-p)^{1-n} = \frac{e^{n\ln(p/(1-p))}}{(1-p)^{-1}} $$
 avec $n$ valant zéro ou 1, ou encore la loi de Poisson 
-$$ e^{-\lambda}\frac{\lambda^n}{n!} = \frac{1}{e^{e^{\ln(\lambda)}}}\frac{1}{n!}e^{-\ln(\lambda)n}$$
+$$ e^{-\lambda}\frac{\lambda^n}{n!} = \frac{1}{e^{e^{\ln(\lambda)}}}\frac{1}{n!}e^{\ln(\lambda)n}$$
 ou enfin la loi géométrique
 $$p^n(1-p) = \frac{e^{n\ln(p)}}{(1-p)^{-1}}.$$
 Dans tous ces exemples, j'ai volontairement écrit la densité de façon inhabituelle : tous ces modèles peuvent s'écrire sous la forme 
