--- a/ch6_1.qmd
+++ b/ch6_1.qmd
@@ -66,6 +66,8 @@ Or, @eq-hess-exp montre que $D\varphi(\theta) = \nabla^2 \ln Z(\theta)$ vaut ég
 
 Il se trouve que la matrice $\mathrm{Var}_\theta(T)$ est centrale dans la théorie des statistiques : il s'agit de la *matrice d'information de Fisher*, que nous étudierons dans la prochaine section. 
 
+Le maximum de vraisemblance ("maximum likelihood") est un bon prétendant au titre de concept le plus important des statistiques modernes. Son histoire est intéressante : [voir cet article](https://arxiv.org/abs/0804.2996).
+
 
 ## Problème d'optimisation
 
